--- a/propCdmx.html
+++ b/propCdmx.html
@@ -177,7 +177,7 @@ https://templatemo.com/tm-526-vanilla
                             <li>a 9 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
-                            <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
+                            <a href="https://ul.waze.com/ul?place=ChIJMc6vWiv50YURY1rtNDuRw2E&ll=19.43393000%2C-99.14056000&navigate=yes&utm_campaign=default&utm_source=waze_website&utm_medium=lm_share_location" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
                         </div>
                     </div>
                 </div>
@@ -245,17 +245,18 @@ https://templatemo.com/tm-526-vanilla
             </div>
         </div>
         <!--******Calle Madero*******-->
-        <!--<div class="parallax-content element-content__callemadero" id="calle_madero">
+        <div class="parallax-content element-content__callemadero" id="calle_madero">
             <div class="mmOverlayBlack"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="titlePlace text-white"><span class="cursiveFont">Calle</span>Madero</h1>
-                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
+                        <p class="text-white font-weight-bold mb-0">Una las principales vías de acceso al centro histórico de la Ciudad de México.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>a 00 minutos caminando</li>
+                            <li>Podemos encontrar diversas tiendas y comida.</li>
+                            <li>Además de ser la calle conectora a la Torre Latinoamericana.</li>
+                            <li>Así como al corazón del centro capitalino.</li>
+                            <li>A 7 minutos caminando</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -264,19 +265,19 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
-        -->
+
         <!--******Castillo de Chapultepec*******-->
-   <!--     <div class="parallax-content element-content__chapultepec" id="chapultepec">
+        <div class="parallax-content element-content__chapultepec" id="chapultepec">
             <div class="mmOverlay"></div>
             <div class="container">
                 <div class="row">
                     <div class="col-12">
                         <h1 class="titlePlace text-white"><span class="cursiveFont">Castillo de</span>Chapultepec</h1>
-                        <p class="text-white font-weight-bold mb-0">Lorem ipsum dolor.</p>
+                        <p class="text-white font-weight-bold mb-0">Ubicado en la primera sección del bosque de Chapultepec en la Ciudad de México.</p>
                         <ul class="text-white font-weight-bold">
-                            <li>Lorem ipsum dolor sit amet, consectetur.</li>
-                            <li>Lorem ipsum dolor sit.</li>
-                            <li>a 00 minutos caminando</li>
+                            <li>Cuenta con diseño arquitectónico principalmente barroco y neoclásico.</li>
+                            <li>A 17 minutos en automóvil.</li>
+                            <li>A 20 minutos en metro.</li>
                         </ul>
                         <div class="btn-waze">
                             <a href="#" class="btn-waze text-white"><i class="fab fa-waze"></i></a>
@@ -285,7 +286,7 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
--->
+
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
