--- a/cdmx.html
+++ b/cdmx.html
@@ -22,10 +22,6 @@
     <!-------------------------------------------->
     <link rel="shortcut icon" href="assets/puntomx_ico.ico">
 
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/hero-slider.css">
-    <link rel="stylesheet" href="css/tt-main.css">
-
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
     <!-------------------------------------------->
     <!-----------------------FONT AWESOME--------------------->
@@ -42,14 +38,14 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
+    <!--------------------------->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="css/hero-slider.css">-->
+    <link rel="stylesheet" href="css/tt-main.css">
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-------------------------------------------->
     <!-------------------------------------------->
 </head>
-<!--
-Vanilla Template
-https://templatemo.com/tm-526-vanilla
--->
 <body>
 <div id="fh5co-wrapper">
     <div id="fh5co-page">
@@ -64,20 +60,21 @@ https://templatemo.com/tm-526-vanilla
                                 <ul class="sf-menu" id="fh5co-primary-menu">
                                     <li><a href="index.html">Inicio</a></li>
                                     <li>
-                                        <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
+                                        <a href="#" class="fh5co-sub-ddown">Hotel</a>
                                         <ul class="fh5co-sub-menu">
-                                            <li><a href="rooms.html" class="active">Habitaciones</a></li>
+                                            <li><a href="rooms.html">Habitaciones</a></li>
                                             <li><a href="services.html">Servicios & Amenidades</a></li>
                                             <li><a href="restaurant.html">Restaurante MX</a></li>
                                             <li><a href="cafe.html">Café MX</a></li>
                                             <li><a href="roomservice.html">Room Service</a></li>
                                         </ul>
                                     </li>
-                                    <li><a href="cdmx.html">Conoce la CDMX</a></li>
+                                    <li><a href="cdmx.html" class="active">Conoce la CDMX</a></li>
                                     <!--<li><a href="blog.html">Blog</a></li>-->
                                     <li><a href="contact.html">Contacto</a></li>
                                 </ul>
                             </nav>
+                        </a>
                     </div>
                 </div>
             </header>
@@ -97,17 +94,18 @@ https://templatemo.com/tm-526-vanilla
             </div>
         </div>
         <div class="fixed-side-navbar">
-    <ul class="nav flex-column">
-        <li class="nav-item"><a class="nav-link" href="#services"><span>¿Qué empacar?</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#home"><span>Torre Latino</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#bellas_artes"><span>Bellas Artes</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#palacio_postal"><span>Palacio Postal</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#templo_mayor"><span>Templo Mayor</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#calle_madero"><span>C. Madero</span></a></li>
-        <li class="nav-item"><a class="nav-link" href="#chapultepec"><span>Chapultepec</span></a></li>
-    </ul>
-</div>
-        <!--<div class="service-content" id="services" style="background: linear-gradient( rgb(4,122,122,0.6) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/pexels/angel_i.jpg); background-size: contain, cover; background-position: center center,center center!important; background-repeat: repeat,no-repeat;">-->
+            <ul class="nav flex-column">
+                <li class="nav-item"><a class="nav-link" href="index.html"><span>Inicio</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#services"><span>¿Qué empacar?</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#home"><span>Torre Latino</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#bellas_artes"><span>Bellas Artes</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#palacio_postal"><span>Palacio Postal</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#templo_mayor"><span>Templo Mayor</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#calle_madero"><span>C. Madero</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="#chapultepec"><span>Chapultepec</span></a></li>
+                <li class="nav-item"><a class="nav-link" href="contact.html"><span>Contacto</span></a></li>
+            </ul>
+        </div>
         <!--*******¿Qué empacar?******-->
         <div class="service-content" id="services">
             <div class="myselfoverlay"></div>
@@ -265,7 +263,6 @@ https://templatemo.com/tm-526-vanilla
                 </div>
             </div>
         </div>
-
         <!--******Castillo de Chapultepec*******-->
         <div class="parallax-content element-content__chapultepec" id="chapultepec">
             <div class="mmOverlay"></div>
@@ -348,10 +345,11 @@ https://templatemo.com/tm-526-vanilla
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="js_t/jquery-1.11.3.min.js"><\/script>')</script>
 <script src="js_t/bootstrap.min.js"></script>
 <script src="js/plugins.js"></script>
 <script src="js/main.js"></script>
+<!--
 <script>
     function openCity(cityName) {
         var i;
@@ -361,27 +359,23 @@ https://templatemo.com/tm-526-vanilla
         }
         document.getElementById(cityName).style.display = "block";
     }
-</script>
+</script>-->
 
 <script>
     $(document).ready(function(){
         // Add smooth scrolling to all links
         $(".fixed-side-navbar a, .primary-button a").on('click', function(event) {
-
             // Make sure this.hash has a value before overriding default behavior
             if (this.hash !== "") {
                 // Prevent default anchor click behavior
                 event.preventDefault();
-
                 // Store hash
                 var hash = this.hash;
-
                 // Using jQuery's animate() method to add smooth page scroll
                 // The optional number (800) specifies the number of milliseconds it takes to scroll to the specified area
                 $('html, body').animate({
                     scrollTop: $(hash).offset().top
                 }, 800, function(){
-
                     // Add hash (#) to URL when done scrolling (default click behavior)
                     window.location.hash = hash;
                 });
