--- a/rooms.html
+++ b/rooms.html
@@ -85,7 +85,7 @@
                                 <ul class="sf-menu" id="fh5co-primary-menu">
                                     <li><a href="index.html">Inicio</a></li>
                                     <li>
-                                        <a href="#" class="active" class="fh5co-sub-ddown">Hotel</a>
+                                        <a href="#" class="fh5co-sub-ddown active">Hotel</a>
                                         <ul class="fh5co-sub-menu">
                                             <li><a href="rooms.html" class="active">Habitaciones</a></li>
                                             <li><a href="services.html">Servicios & Amenidades</a></li>
@@ -99,6 +99,7 @@
                                     <li><a href="contact.html">Contacto</a></li>
                                 </ul>
                             </nav>
+                        </a>
                     </div>
                 </div>
             </header>
