--- a/contact.html
+++ b/contact.html
@@ -117,15 +117,10 @@
       </div>
     </div>
 
-    <div id="fh5co-contact-section">
+    <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse">
       <div class="row">
         <div class="col-md-6">
-          <!--<div id="map" class="fh5co-map"></div>-->
-          <div id="map1" class="fh5co-map" style="height: 600px; display: flex; justify-content: center; align-items: center;">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.579176855236!2d-99.13985438406046!3d19.430580286885526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff515d840f61%3A0x80e2a464c3755aa!2sHotel%20Punto%20Mx!5e0!3m2!1ses!2smx!4v1653328105577!5m2!1ses!2smx" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-          </div>
-        </div>
-        <div class="col-md-6">
+          <!--
           <div class="col-md-12">
             <h3>Visitanos</h3>
             <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
@@ -133,7 +128,6 @@
               <li><i class="ti-map"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum, velit!</li>
               <li><i class="ti-mobile"></i>+ 1234 5678 91</li>
               <li><i class="ti-envelope"></i><a href="#">info@yoursite.com</a></li>
-              <!--<li><i class="ti-home"></i><a href="#">www.yoursite.com</a></li>-->
             </ul>
           </div>
           <div class="col-md-12">
@@ -160,7 +154,43 @@
               </div>
             </div>
           </div>
+          -->
+          <form class="contact_form" id="contactForm">
+            <ul>
+              <li>
+                <h2>Visítanos</h2>
+                <!--<span class="required_notification">* Denotes Required Field</span>-->
+              </li>
+              <li>
+                <label for="from_name">Nombre:</label>
+                <input type="text" name="name" placeholder="Nombre" id="from_name" required />
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <label for="from_email">Email:</label>
+                <input type="email" name="email" placeholder="email@example.com" id="from_email" required />
+                <!--<span class="fa valid-icon"></span>-->
+                <span class="form_hint">Formato "email@domino.com"</span>
+              </li>
+              <li>
+                <label for="from_message">Mensaje:</label>
+                <textarea name="message" cols="40" rows="6" required id="from_message"></textarea>
+                <!--<span class="fa valid-icon"></span>-->
+              </li>
+              <li>
+                <input class="submit" type="button" value="Enviar" onclick="enviarEmail()" width="50px" height="100px"/>
+              </li>
+            </ul>
+          </form>
+
         </div>
+        <div class="col-md-6">
+          <!--<div id="map" class="fh5co-map"></div>-->
+          <div id="map1" class="fh5co-map" style="height: 600px; display: flex; justify-content: center; align-items: center; padding:0 20px;">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3762.579176855236!2d-99.13985438406046!3d19.430580286885526!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85d1ff515d840f61%3A0x80e2a464c3755aa!2sHotel%20Punto%20Mx!5e0!3m2!1ses!2smx!4v1653328105577!5m2!1ses!2smx" width="700" height="500" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          </div>
+        </div>
+
       </div>
     </div>
 
@@ -253,8 +283,31 @@
 <!-- Google Map -->
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>
 <script src="js/google_map.js"></script>
-
 <script src="js/custom.js"></script>
-
+<script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js">
+</script>
+<script>
+  function enviarEmail(){
+  (function(){
+    emailjs.init("7y55EjOorzlD_0m9_");
+  })();
+  let name = document.getElementById("from_name").value;
+  let email = document.getElementById("from_email").value;
+  let msg = document.getElementById("from_message").value;
+  let templateParams = {
+    from_name: name,
+    from_email: email,
+    message: msg,
+    to_name: 'HotelPuntoMx'
+  };
+  emailjs.send('service_orh2159', 'template_e4xoh8b', templateParams)
+          .then(function(response) {
+            console.log('SUCCESS!', response.status, response.text);
+          }, function(error) {
+            console.log('FAILED...', error);
+          });
+  }
+</script>
 </body>
 </html>
