Modificación tamaño de imagenes

--- a/contact.html
+++ b/contact.html
@@ -178,7 +178,7 @@
                 <!--<span class="fa valid-icon"></span>-->
               </li>
               <li>
-                <input class="submit" type="button" value="Enviar" onclick="enviarEmail()" width="50px" height="100px"/>
+                <input class="btn btn-primary btn-luxe-primary" type="button" value="Enviar" onclick="enviarEmail()" style="height: 40px; width: 90px; box-shadow: none; margin: auto;"/>
               </li>
             </ul>
           </form>
