Enlazando imagenes rotas

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 	<aside id="fh5co-hero" class="js-fullheight">
 		<div class="flexslider js-fullheight">
 			<ul class="slides">
-		   	<li style="background-image: url(assets/webp/ROOM_SERVICE.webp);">
+		   	<li style="background-image: url(assets/webp/CORTE.jpeg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -126,7 +126,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(assets/webp/paquetes_especiales.webp);">
+		   	<li style="background-image: url(assets/webp/paquetes_especiales.jpeg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -142,7 +142,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(https://dynamic-media-cdn.tripadvisor.com/media/photo-o/1c/c0/e2/55/hotel-punto-mx.jpg?w=1200&h=-1&s=1);">
+		   	<li style="background-image: url(./assets/webp/Punto_MX-32.jpeg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -158,7 +158,7 @@
 		   			</div>
 		   		</div>
 		   	</li>
-		   	<li style="background-image: url(assets/webp/RECEPCION.webp);">
+		   	<li style="background-image: url(assets/webp/RECEPCION.jpeg);">
 		   		<div class="overlay-gradient"></div>
 		   		<div class="container">
 		   			<div class="col-md-12 col-md-offset-0 text-center slider-text">
@@ -229,7 +229,7 @@
 			<div class="row">
 				<!--Ejecutiva-->
 				<div class="feature-full-1col">
-					<div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.webp);">
+					<div class="image" style="background-image: url(assets/webp/EJECUTIVA_1.jpeg);">
 						<div class="descrip text-center">
 							<p><small>Reserva por</small><span>$1,087.87/noche</span></p>
 						</div>
@@ -243,7 +243,7 @@
 				<div class="feature-full-2col">
 					<!--Deluxe Cama Queen-->
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(assets/webp/DELUXE_QUEEN.png);">
+						<div class="image" style="background-image: url(assets/webp/DELUXE_CAMA_QUEEN.jpeg);">
 							<div class="descrip text-center">
 								<p><small>Reserva por</small><span>$1,221.76/noche</span></p>
 							</div>
@@ -256,7 +256,7 @@
 					</div>
 					<!--Deluxe dos camas-->
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.webp);">
+						<div class="image" style="background-image: url(assets/webp/DELUXE_2_CAMAS_2.jpeg);">
 							<div class="descrip text-center">
 								<p><small>Reserva por</small><span>$1,297.08/noche</span></p>
 							</div>
@@ -270,7 +270,7 @@
 				</div>
 				<!--Master Suite-->
 				<div class="feature-full-1col" style="flex-direction: row-reverse;">
-					<div class="image" style="background-image: url(assets/webp/MASTER_SUITE.webp);">
+					<div class="image" style="background-image: url(assets/webp/MASTER_SUITE.jpeg);">
 						<div class="descrip text-center">
 							<p><small>Reserva por</small><span>$00/noche</span></p>
 						</div>
@@ -284,7 +284,7 @@
 				<!--Suite Tina Antigua-->
 				<div class="feature-full-2col" style="flex-direction: revert">
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(https://media.xmlcal.com/pic/p0003/6868/41.png);">
+						<div class="image" style="background-image: url(./assets/webp/SUITE_CON_TINA_4.jpeg);">
 							<div class="descrip text-center">
 								<p><small>Reserva por</small><span>$1,589.96/noche</span></p>
 							</div>
@@ -296,7 +296,7 @@
 						</div>
 					</div>
 					<div class="f-hotel">
-						<div class="image" style="background-image: url(assets/webp/JACUZZI.webp);">
+						<div class="image" style="background-image: url(assets/webp/SUITE_CON_JACUZZI_6.jpeg);">
 							<div class="descrip text-center">
 								<p><small>Reserva por</small><span>$1,589.96/noche</span></p>
 							</div>
@@ -357,24 +357,13 @@
 						<i class="fa-solid fa-paw icon" style="line-height: unset;"></i>
 						<span></span>
 					</a>
-					<!--
-					<a href="#" data-tab="tab5">
-						
-						<i class="flaticon-massage icon"></i>
-						<span>Spa</span>
-					</a>-->
-					<!--
-					<a href="#" data-tab="tab6">
-						<i class="flaticon-bicycle icon"></i>
-						<span>Gym</span>
-					</a>-->
 				</nav>
 				<div class="tab-content-container">
 					<div class="tab-content active show" data-tab-content="tab1">
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/47/60/99/hotel-punto-mx.jpg?w=1200&h=-1&s=1" class="img-responsive" alt="Image">
+									<img src="./assets/webp/ALITAS.jpeg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
 									<span class="super-heading-sm">Conoce nuestro</span>
@@ -392,7 +381,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="assets/webp/AMENIDADES_2.webp" class="img-responsive" alt="Image">
+									<img src="assets/webp/AMENIDADES_2.jpeg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
 									<span class="super-heading-sm">Conoce nuestro</span>
@@ -411,11 +400,13 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="assets/webp/RECEPCION.webp" class="img-responsive" alt="Image">
+									<img src="assets/webp/parking.jpeg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
 									<span class="super-heading-sm">Autoservicio de</span>
 									<h3 class="heading">Estacionamiento</h3>
+									<h4></h4>
+									<p>En DEPRISA no, nuestros estacionamientos son de autoservicio, ¿Qué significa autoservicio? Se refiere a que en nuestros estacionamientos tú entras y sales con tu coche sin tener que dejar tus llaves a nadie, haciendo el pago en una de nuestras máquinas de cobro, todo esto, en instalaciones limpias, cuidadas y a tan solo unos pasos de lugares y sitios de interés alrededor de la ciudad.</p>
 									<p>En Hotel Punto MX, contamos con un convenio de Estacionamiento con DEPRISA <br>
 									Costo $300MXN/24 horas.<br><br>
 									<!--<small><a href="services.html">Más información.</a></small>-->
@@ -432,7 +423,7 @@
 						<div class="container">
 							<div class="row">
 								<div class="col-md-6">
-									<img src="images/tab_img_4.jpg" class="img-responsive" alt="Image">
+									<img src="./assets/webp/pet_friendly.jpeg" class="img-responsive" alt="Image">
 								</div>
 								<div class="col-md-6">
 									<span class="super-heading-sm"></span>
