--- a/cdmx.html
+++ b/cdmx.html
@@ -22,7 +22,7 @@
     <!-------------------------------------------->
     <link rel="shortcut icon" href="assets/puntomx_ico.ico">
 
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">
+    <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">-->
     <!-------------------------------------------->
     <!-----------------------FONT AWESOME--------------------->
     <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
@@ -80,7 +80,7 @@
             </header>
 
         </div>
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/SUITE_CON_JACUZZI.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/RECEPCION.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
