--- a/roomservice.html
+++ b/roomservice.html
@@ -94,7 +94,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 168, 171, 0.4) 100%, rgba(0, 168, 171, 0.2)100%),url(./assets/webp/ROOM_SERVICE.webp); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5)100%),url(./assets/webp/MENU_DE_ALMOHADAS.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
