--- a/services.html
+++ b/services.html
@@ -93,7 +93,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/DELUXE_2_CAMAS_4.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/DELUXE_2_CAMAS_4.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -184,21 +184,21 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="blog-grid" style="background-image: url(./assets/webp/ROOM_SERVICE.webp);">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/AUGACHILE.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="restaurant.html">Vive el sabor de la CDMX en nuestro Restaurante MX</a></h3>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="blog-grid" style="background-image: url(./assets/webp/AMENIDADES_2.webp);">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/AMENIDADES_2.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="cafe.html">Deja que tus sentidos sean tocados en nuestro Café MX</a></h3>
                         </div>
                     </div>
                     <div class="col-md-4">
-                        <div class="blog-grid" style="background-image: url(./assets/webp/ROOM_SERVICE.webp);">
+                        <div class="blog-grid" style="background-image: url(./assets/webp/DELUXE_2_CAMAS_5.jpeg);">
                         </div>
                         <div class="desc" style="text-align: center;">
                             <h3 style="font-size: 1.6rem;"><a href="roomservice.html">Disfruta de la comodidad de tu estancia gracias a nuestro <i>Room Service</i></a></h3>
