--- a/rooms.html
+++ b/rooms.html
@@ -15,9 +15,9 @@
     <!-- Facebook and Twitter integration -->
     <meta property="og:title" content=""/>
     <meta property="og:image" content=""/>
-    <meta property="og:url" content=""/>
-    <meta property="og:site_name" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:url" content="hotelpuntomx.com"/>
+    <meta property="og:site_name" content="Hotel Punto MX"/>
+    <meta property="og:description" content="El punto más cómodo de México"/>
     <meta name="twitter:title" content="" />
     <meta name="twitter:image" content="" />
     <meta name="twitter:url" content="" />
@@ -107,7 +107,7 @@
         </div>
         <!-- end:fh5co-header -->
         <!--<div class="fh5co-parallax" style="background-image: url(./assets/webp/EJECUTIVA.webp); background-position: 0 0!important; background-repeat: no-repeat;" data-stellar-background-ratio="0.5">-->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/EJECUTIVA.webp); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.4) 100%, rgba(0, 0, 0, 0.2)100%),url(./assets/webp/RECEPCION.jpeg); background-size: contain, cover; background-position: 0 bottom,0 bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -125,9 +125,9 @@
             <div class="tm-container-outer" id="tm-section-2">
                 <section class="tm-slideshow-section">
                     <div class="tm-slideshow hotel-grid">
-                        <img src="./assets/webp/EJECUTIVA.webp" alt="Image">
-                        <img src="./assets/webp/EJECUTIVA_1.webp" alt="Image">
-                        <img src="./assets/webp/EJECUTIVA.webp" alt="Image">
+                        <img src="./assets/webp/EJECUTIVA.jpeg" alt="Hotel PuntoMX Habitación Ejecutiva CDMX Negocios">
+                        <img src="./assets/webp/EJECUTIVA_1.jpeg" alt="Hotel PuntoMX Habitación Ejecutiva CDMX Negocios">
+                        <!--<img src="./assets/webp/EJECUTIVA.webp" alt="Image">-->
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Ejecutiva</h2>
@@ -138,9 +138,10 @@
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaDCQ">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_QUEEN.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
+                        <img src="./assets/webp/DELUXE_CAMA_QUEEN.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
+                        <img src="./assets/webp/DELUXE_QUEEN_1.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
+                        <img src="./assets/webp/DELUXE_QUEEN_2.jpeg" alt="Hotel PuntoMX Habitación Deluxe Cama QUEEN">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
@@ -152,9 +153,11 @@
                 </section>
                 <section class="tm-slideshow-section" id="anclaDDC">
                     <div class="tm-slideshow">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_5.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_4.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_5.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Deluxe Dos Camas</h2>
@@ -165,9 +168,9 @@
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaMS">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/MASTER_SUITE.webp" alt="Image">
-                        <img src="./assets/webp/MASTER_SUITE_3.webp" alt="Image">
-                        <img src="./assets/webp/MASTER_SUITE_4.webp" alt="Image">
+                        <img src="./assets/webp/MASTER_SUITE.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
+                        <img src="./assets/webp/MASTER_SUITE_3.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
+                        <img src="./assets/webp/MASTER_SUITE_4.jpeg" alt="Hotel PuntoMX Habitación Master Suite CDMX">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
@@ -179,9 +182,9 @@
                 </section>
                 <section class="tm-slideshow-section" id="anclaSTA">
                     <div class="tm-slideshow">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/SUITE_CON_TINA_3.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
+                        <img src="./assets/webp/SUITE_CON_TINA_4.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
+                        <img src="./assets/webp/SUITE_CON_TINA_5.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Suite Tina Antigua</h2>
@@ -192,9 +195,10 @@
                 <section class="clearfix tm-slideshow-section tm-slideshow-section-reverse" id="anclaSJ">
 
                     <div class="tm-right tm-slideshow tm-slideshow-highlight">
-                        <img src="./assets/webp/SUITE_CON_JACUZZI.webp" alt="Image">
-                        <img src="./assets/webp/JACUZZI_1.webp" alt="Image">
-                        <img src="./assets/webp/JACUZZI_2.webp" alt="Image">
+                        <img src="./assets/webp/SUITE_CON_JACUZZI.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
+                        <img src="./assets/webp/SUITE_CON_JACUZZI_6.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
+                        <img src="./assets/webp/JACUZZI_2.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
+                        <img src="./assets/webp/JACUZZI_1.jpeg" alt="Hotel PuntoMX Suite con Jacuzzi CDMX Vacation">
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
@@ -206,9 +210,9 @@
                 </section>
                 <section class="tm-slideshow-section" id="anclaJS">
                     <div class="tm-slideshow">
-                        <img src="./assets/webp/DELUXE_2_CAMAS.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_2.webp" alt="Image">
-                        <img src="./assets/webp/DELUXE_2_CAMAS_3.webp" alt="Image">
+                        <img src="./assets/webp/DELUXE_2_CAMAS.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_2.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
+                        <img src="./assets/webp/DELUXE_2_CAMAS_3.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
                         <h2 class="">Junior Suite</h2>
