Seccion Habitaciones al 98%, solo restan fotos Junior Suite

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
                 <div class="slider-text-inner js-fullheight">
                   <div class="desc">
                     <h2>Bienvenido</h2>
-                    <p style="background-color: rgba(0,0,0,0.8); line-height: normal; color: #FFF;"><small>
+                    <p style="background-color: rgba(0,0,0,0.6); line-height: normal; color: #FFF;"><small>
                       Nos encontramos en el Centro Histórico, uno de los sitios más representativos de la CDMX, déjate consentir en PUNTO MX con una tendencia ART DECO que encierra modernidad y confort que te hará vivir la mejor experiencia hospitalaria. Contamos con 60 lujosas y cómodas habitaciones; cada una de ellas con un toque especial. Ya sea que tu viaje sea familiar, de amigos o negocios, PUNTO MX es un lugar maravilloso para hacer de tu experiencia en México algo único.
                     </small>
                     <ul class="banner_well" style="">
-                      <li><i class="fa-solid fa-drumstick-bite"></i><small>Desayuno Buffete</small></li>
-                      <li><i class="fa-solid fa-bed"></i><small>Upgrade gratis</small></li>
-                      <li><i class="fa-solid fa-hand-holding-dollar"></i><small>Mejor precio</small></li>
+                      <li><i class="fa-solid fa-drumstick-bite" style="color:#FFF!important"></i><small>Desayuno Buffete</small></li>
+                      <li><i class="fa-solid fa-bed" style="color:#FFF!important"></i><small>Upgrade gratis</small></li>
+                      <li><i class="fa-solid fa-hand-holding-dollar" style="color:#FFF!important"></i><small>Mejor precio</small></li>
                     </ul>
                     </p>
                   </div>
