--- a/rooms.html
+++ b/rooms.html
@@ -47,6 +47,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <!-- Flexslider  -->
     <link rel="stylesheet" href="css/flexslider.css">
+    <link rel="stylesheet" href="css/mybtn_flot.css">
 
     <!--------------------------------->
     <link rel="stylesheet" href="css/bootstrap.min.css">                                      <!-- Bootstrap style -->
@@ -120,6 +121,11 @@
                 </div>
             </div>
         </div>
+        <div class="container" style="z-index:10!important;background-color: var(--bg-hover)!important;">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+            </div>
+        </div>
 
         <div class="tm-page-wrap mx-auto" style="margin-top: 30px;" id="ejecutivaAncla">
             <div class="tm-container-outer" id="tm-section-2">
@@ -130,7 +136,7 @@
                         <!--<img src="./assets/webp/EJECUTIVA.webp" alt="Image">-->
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Ejecutiva</h2>
+                        <h2 class="cursiveFont">Ejecutiva</h2>
                         <p style="color:#FFF;">Las habitaciones ejecutivas están enfocadas a nuestros huéspedes de negocios.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -145,7 +151,7 @@
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Deluxe Cama Queen</h2>
+                        <h2 class="cursiveFont">Deluxe Cama Queen</h2>
                         <p style="color:#FFF;">Nuestras habitaciones Deluxe son más amplias que las habitaciones ejecutivas.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -160,7 +166,7 @@
                         <img src="./assets/webp/DELUXE_2_CAMAS_5.jpeg" alt="Hotel Punto Mx Habitación Deluxe 2 camas">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Deluxe Dos Camas</h2>
+                        <h2 class="cursiveFont">Deluxe Dos Camas</h2>
                         <p style="color:#FFF;">Habitaciones más amplias, cuentan con dos camas matrimoniales para hospedar cómodamente a 4 personas.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -174,7 +180,7 @@
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Máster Suite</h2>
+                        <h2 class="cursiveFont">Máster Suite</h2>
                         <p style="color:#FFF;">Habitación amplia con una terraza privada con jacuzzi, en ella encontrarás la comodidad necesaria para relajarte.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -187,7 +193,7 @@
                         <img src="./assets/webp/SUITE_CON_TINA_5.jpeg" alt="Hotel PuntonMX Habitación con Tina Antigua CDMx">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Suite Tina Antigua</h2>
+                        <h2 class="cursiveFont">Suite Tina Antigua</h2>
                         <p style="color:#FFF;">En esta habitación podrás encontrar amplitud, comodidad y te enamorarás de su tina antigua que da un estilo vintage. Vista exterior a la calle principal del hotel.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -202,7 +208,7 @@
                     </div>
 
                     <div class="tm-slideshow-description tm-slideshow-description-left tm-bg-highlight">
-                        <h2 class="">Suite Jacuzzi</h2>
+                        <h2 class="cursiveFont">Suite Jacuzzi</h2>
                         <p style="color:#FFF;">Habitación amplia, diseñada para que puedas relajarte tanto en su amplia cama como en su jacuzzi de hidromasaje, Vista exterior a la calle principal del hotel.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-second btn-luxe-second">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
@@ -215,7 +221,7 @@
                         <img src="./assets/webp/DELUXE_2_CAMAS_3.jpeg" alt="Hotel PuntoMX Habitación Junior Suite  CDMX Vacation">
                     </div>
                     <div class="tm-slideshow-description tm-bg-primary">
-                        <h2 class="">Junior Suite</h2>
+                        <h2 class="cursiveFont">Junior Suite</h2>
                         <p style="color:#FFF;">Habitación amplia con cama king size, con vista interior, en ella encontrarás la comodidad necesaria para relajarte.</p>
                         <p><a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="btn btn-primary btn-luxe-primary">Reserva aquí <i class="ti-angle-right"></i></a></p>
                     </div>
