--- a/services.html
+++ b/services.html
@@ -50,7 +50,7 @@
 
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="stylesheet" href="css/mybtn_flot.css">
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
@@ -104,6 +104,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
             </div>
         </div>
 <!----------------------------------------------------->
