Seccion Restaurante 100%, Sección de Cafe 95%, faltan imágenes para galería

--- a/cafe.html
+++ b/cafe.html
@@ -51,6 +51,7 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slider.css">
+    <link rel="stylesheet" href="css/mybtn_flot.css">
 
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
@@ -105,6 +106,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
             </div>
         </div>
         <!----------------------------------------------------->
