--- a/roomservice.html
+++ b/roomservice.html
@@ -51,14 +51,18 @@
     <!-- Style -->
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/slider.css">
-
+    <link rel="stylesheet" href="css/mybtn_flot.css">
     <!-- Modernizr JS -->
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-- FOR IE9 below -->
     <!--[if lt IE 9]>
     <script src="js/respond.min.js"></script>
     <![endif]-->
-
+    <style>
+        body{
+            overflow: visible;
+        }
+    </style>
 </head>
 <body>
 
@@ -94,7 +98,7 @@
 
         </div>
         <!-- end:fh5co-header -->
-        <div class="fh5co-parallax" style="background: linear-gradient( rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5)100%),url(./assets/webp/MENU_DE_ALMOHADAS.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
+        <div class="fh5co-parallax" style=" background: linear-gradient( rgba(0, 0, 0, 0.7) 100%, rgba(0, 0, 0, 0.5)100%),url(./assets/webp/MENU_DE_ALMOHADAS.jpeg); background-size: contain, cover; background-position: 0 bottom,right bottom!important; background-repeat: repeat,no-repeat;" data-stellar-background-ratio="0.5">
             <div class="overlay"></div>
             <div class="container">
                 <div class="row">
@@ -102,21 +106,30 @@
                         <div class="fh5co-intro fh5co-table-cell">
                             <p>Disfruta de la comodidad de tu estancia con nuestro</p>
                             <h1 class="text-center">Room Service</h1>
+                            <p>
+                                <a href="./files/menu-roomservice-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary fontWhite" style="color: #FFF!important;">Room Service<i class="ti-angle-right"></i>
+                                </a>
+                            </p>
                         </div>
                     </div>
                     <!--Botón-->
-                    <div class="col-md-4 col-md-offset-4" style="margin-top: -40px;">
+                    <!--
+                    <div class="col-md-4 col-md-offset-4" style="margin-top: -40px; margin-bottom: 0;">
                         <div class="hotel-content1">
                             <div class="desc" style="justify-content: center; text-align: center;">
                                 <p><a href="./files/menu-roomservice-qr.pdf" target="_blank" class="btn btn-primary btn-luxe-primary">Room Service<i class="ti-angle-right"></i></a></p>
                             </div>
                         </div>
                     </div>
+                    -->
                 </div>
             </div>
         </div>
-
-
+        <div class="container">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+            </div>
+        </div>
         <footer id="footer" class="fh5co-bg-color">
             <div class="container">
                 <div class="row">
@@ -174,7 +187,6 @@
                 </div>
             </div>
         </footer>
-
     </div>
     <!-- END fh5co-page -->
 
