Sección Cónoce la CDMX 100%

--- a/cdmx.html
+++ b/cdmx.html
@@ -38,6 +38,7 @@
     <link rel="stylesheet" href="css/icomoon.css">
     <link rel="stylesheet" href="css/flexslider.css">
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/mybtn_flot.css">
     <!--------------------------->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <!--<link rel="stylesheet" href="css/hero-slider.css">-->
@@ -91,6 +92,11 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
+                <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
             </div>
         </div>
         <div class="fixed-side-navbar">
@@ -345,10 +351,10 @@
 </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="js_t/jquery-1.11.3.min.js"><\/script>')</script>
+<!--<script>window.jQuery || document.write('<script src="js_t/jquery-1.11.3.min.js"><\/script>')</script>-->
 <script src="js_t/bootstrap.min.js"></script>
-<script src="js/plugins.js"></script>
-<script src="js/main.js"></script>
+<!--<script src="js/plugins.js"></script>
+<script src="js/main.js"></script>-->
 <!--
 <script>
     function openCity(cityName) {
@@ -383,6 +389,5 @@
         });
     });
 </script>
-
 </body>
 </html>
