--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
 
   <!-- Style -->
   <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/mybtn_flot.css">
 
   <!-- Modernizr JS -->
   <script src="js/modernizr-2.6.2.min.js"></script>
@@ -78,6 +79,7 @@
                     <li><a href="services.html">Servicios & Amenidades</a></li>
                     <li><a href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
+                    <li><a href="roomservice.html">Room Service</a></li>
                     <!--<li>
                         <a href="#" class="fh5co-sub-ddown">King Hotel</a>
                         <ul class="fh5co-sub-menu">
@@ -116,7 +118,12 @@
         </div>
       </div>
     </div>
-
+    <div class="container">
+      <div class="row">
+        <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
+      </div>
+    </div>
+<!------------------------------------------->
     <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse">
       <div class="row">
         <div class="col-md-6">
