--- a/contact.html
+++ b/contact.html
@@ -24,9 +24,9 @@
   <meta name="twitter:card" content="" />
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="shortcut icon" href="assets/puntomx_ico.ico">
+  <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
-
+  <script src="https://kit.fontawesome.com/f40904d23d.js" crossorigin="anonymous"></script>
   <!-- Stylesheets -->
   <!-- Dropdown Menu -->
   <link rel="stylesheet" href="css/superfish.css">
@@ -80,18 +80,6 @@
                     <li><a href="restaurant.html">Restaurante MX</a></li>
                     <li><a href="cafe.html">Café MX</a></li>
                     <li><a href="roomservice.html">Room Service</a></li>
-                    <!--<li>
-                        <a href="#" class="fh5co-sub-ddown">King Hotel</a>
-                        <ul class="fh5co-sub-menu">
-                            <li><a href="http://freehtml5.co/preview/?item=build-free-html5-bootstrap-template" target="_blank">Build</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=work-free-html5-template-bootstrap" target="_blank">Work</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=light-free-html5-template-bootstrap" target="_blank">Light</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=relic-free-html5-template-using-bootstrap" target="_blank">Relic</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=display-free-html5-template-using-bootstrap" target="_blank">Display</a></li>
-                            <li><a href="http://freehtml5.co/preview/?item=sprint-free-html5-template-bootstrap" target="_blank">Sprint</a></li>
-                        </ul>
-                    </li>
-                    <li><a href="#">Five Star Hotel</a></li>-->
                   </ul>
                 </li>
                 <li><a href="cdmx.html">Conoce la CDMX</a></li>
@@ -123,8 +111,22 @@
         <a href="https://www.beds24.com/booking.php?propid=36868&referer=BookingLink" class="mybtn-flotante text-rsv">Reserva aquí</a>
       </div>
     </div>
+    <!----------------------------------------------------->
+    <div id="fh5co-counter-section" class="fh5co-counters" style="background-color: var(--color-primario); padding: 0;">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 text-center myc" >
+            <img src="./assets/logos/puntomx_ico.ico" alt="Logo en blanco del Restaurante MX" style="max-width: 90%;">
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;">¡Reserva con la tarifa más baja! <br>+52 (55) 5512 - 7064</p>
+            <p class="fh5co-counter-label" style="color: var(--white); text-transform: none; font-size: 1.5rem; letter-spacing: normal;text-align: center;"><i class="fa-solid fa-location-dot"></i> Uruguay 47 Col. Centro C.P. 06020 CDMX, MEX.</p>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!----------------------------------------------------->
 <!------------------------------------------->
-    <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse">
+<!------------------------------------------->
+    <div id="fh5co-contact-section" style=" display:flex; flex-direction: column-reverse; padding-top: 1.5rem!important; padding-bottom: 0.5rem!important;">
       <div class="row">
         <div class="col-md-6">
           <!--
@@ -207,7 +209,7 @@
         <div class="row">
           <div class="col-md-3">
             <div class="copyright">
-              <p><small>&copy; Propuesta EKNR<br> Todos los derechos reservados. </small> <br>
+              <p style="color: var(--grey-sv);"><small>&copy; Hotel Punto MX<br> Todos los derechos reservados. </small> <br>
               </p>
             </div>
           </div>
@@ -218,17 +220,17 @@
                 <ul class="link">
                   <li><a href="#">Acerca de Nosotros</a></li>
                   <li><a href="#">Sucursal</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
-                  <li><a href="#">Lorem ipsum</a></li>
+                  <li><a href="#">Bolsa de Trabajo</a></li>
+                  <li><a href="#">Aviso de Privacidad</a></li>
                 </ul>
               </div>
               <div class="col-md-6">
                 <h3>Comodidades</h3>
                 <ul class="link">
-                  <li><a href="#">Resturant</a></li>
-                  <li><a href="#">Bars</a></li>
-                  <li><a href="#">Estacionamiento</a></li>
-                  <li><a href="#">Pet Friendly</a></li>
+                  <li><a href="restaurant.html">Resturant MX</a></li>
+                  <li><a href="cafe.html">Café MX</a></li>
+                  <li><a href="services.html">Estacionamiento</a></li>
+                  <li><a href="services.html">Pet Friendly</a></li>
                   <!--<li><a href="#">5item</a></li>
                   <li><a href="#">6item</a></li>-->
                 </ul>
@@ -248,10 +250,11 @@
           <div class="col-md-3">
             <ul class="social-icons">
               <li>
-                <a href="#"><i class="icon-twitter-with-circle"></i></a>
-                <a href="#"><i class="icon-facebook-with-circle"></i></a>
-                <a href="#"><i class="icon-instagram-with-circle"></i></a>
-                <a href="#"><i class="icon-linkedin-with-circle"></i></a>
+                <a href="https://twitter.com/hotel_puntomx?lang=es" target="_blank"><i class="icon-twitter-with-circle"></i></a>
+                <a href="https://www.facebook.com/HotelPuntoMX/" target="_blank"><i class="icon-facebook-with-circle"></i></a>
+                <a href="https://www.instagram.com/hotelpuntomx/" target="_blank"><i class="icon-instagram-with-circle"></i></a>
+                <!--<a href="#"><i class="fa fa-tripadvisor"></i></a>-->
+                <!--<a href="#"><i class="icon-linkedin-with-circle"></i></a>-->
               </li>
             </ul>
           </div>
