--- a/cdmx.html
+++ b/cdmx.html
@@ -20,7 +20,7 @@
     <meta name="twitter:url" content="" />
     <meta name="twitter:card" content="" />
     <!-------------------------------------------->
-    <link rel="shortcut icon" href="assets/puntomx_ico.ico">
+    <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
 
     <!--<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800" rel="stylesheet">-->
     <!-------------------------------------------->
@@ -55,7 +55,7 @@
                 <div class="container">
                     <div class="nav-header">
                         <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i>
-                            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
+                            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
                             <!--<h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>-->
                             <nav id="fh5co-menu-wrap" role="navigation">
                                 <ul class="sf-menu" id="fh5co-primary-menu">
