--- a/roomsDep.html
+++ b/roomsDep.html
@@ -24,7 +24,7 @@
   <meta name="twitter:card" content="" />
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-  <link rel="shortcut icon" href="assets/puntomx_ico.ico">
+  <link rel="shortcut icon" href="assets/logos/puntomx_ico.ico">
   <!-- <link href='https://fonts.googleapis.com/css?family=Lato:400,100,100italic,300,300italic,400italic,700italic,900,700,900italic' rel='stylesheet' type='text/css'> -->
 
   <!-- Stylesheets -->
@@ -67,7 +67,7 @@
         <div class="container">
           <div class="nav-header">
             <a href="#" class="js-fh5co-nav-toggle fh5co-nav-toggle"><i></i>
-            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
+            <h1 id="fh5co-logo"><a href="index.html"><img src="assets/logos/puntomx_ico.ico" alt="Logo de Hoteles Punto MX" height="80px" srcset=""></a></h1>
             <!--<h1 id="fh5co-logo"><a href="index.html">LOGO</a></h1>-->
             <nav id="fh5co-menu-wrap" role="navigation">
               <ul class="sf-menu" id="fh5co-primary-menu">
