--- a/cdmx.html
+++ b/cdmx.html
@@ -44,7 +44,7 @@
     <script src="js/modernizr-2.6.2.min.js"></script>
     <!-------------------------------------------->
 </head>
-<body>
+<body class="mybody">
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
