--- a/restaurant.html
+++ b/restaurant.html
@@ -38,7 +38,7 @@
   <link rel="stylesheet" href="css/mybtn_flot.css">
   <script src="js/modernizr-2.6.2.min.js"></script>
 </head>
-<body>
+<body class="mybody">
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
