--- a/services.html
+++ b/services.html
@@ -53,7 +53,7 @@
     <!-------------------------------------------->
     <!-------------------------------------------->
 </head>
-<body>
+<body class="mybody">
 <!------ modals ------->
 <div class="modal fade" id="aboutUs" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
