--- a/cdmx.html
+++ b/cdmx.html
@@ -298,28 +298,28 @@
                         <div class="row">
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <h4>PRIMAVERA<br><small >Marzo, Abril y Mayo</small></h4>
+                                    <h4 class="fontWhite">PRIMAVERA<br><small >Marzo, Abril y Mayo</small></h4>
                                     <div class="line-dec"></div>
                                     <p>Suele ser la estación más cálida y seca con temperaturas que alcanzan hasta los 30°C por la tarde.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <h4>VERANO<br><small>Junio, Julio, Agosto y Septiembre</small></h4>
+                                    <h4 class="fontWhite">VERANO<br><small>Junio, Julio, Agosto y Septiembre</small></h4>
                                     <div class="line-dec"></div>
                                     <p>Esta es la estación mejor conocida por ser la TEMPORADA DE LLUVIA. Se  caracteriza por tener temperaturas de moderadas a cálidas durante la mañana con cielos despejados que se transforman en cielos nublados con lluvias casi todos los días por las tardes.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <h4>OTOÑO<br><small>Octubre y Noviembre</small></h4>
+                                    <h4 class="fontWhite">OTOÑO<br><small>Octubre y Noviembre</small></h4>
                                     <div class="line-dec"></div>
                                     <p>Esta es una de las estaciones más agradables del año en la ciudad, ya que se caracteriza por tener temperaturas suaves de hasta 20° C con cielos despejados prácticamente sin nubes y brisa ligera y fresca. En los amaneceres y los atardeceres suele descender la temperatura hasta 10° C.</p>
                                 </div>
                             </div>
                             <div class="col-md-6">
                                 <div class="service-item">
-                                    <h4>INVIERNO<br><small> Diciembre, Enero y Febrero</small></h4>
+                                    <h4 class="fontWhite">INVIERNO<br><small> Diciembre, Enero y Febrero</small></h4>
                                     <div class="line-dec"></div>
                                     <p>Esta estación también suele ser muy agradable al presentar vientos suaves y cielos despejados, la única diferencia con respecto al otoño consiste en que algunos días se presentan frentes fríos del norte que hacen descender las temperaturas a sus mínimos anuales de hasta -3°C por las noches aunque durante la mañana la temperatura suele subir hasta 15°C o 20°C. Ocasionalmente durante esta estación se llegan a presentar nevadas en las partes altas de las serranías que rodean la ciudad.</p>
                                 </div>
