--- a/cdmx.html
+++ b/cdmx.html
@@ -75,7 +75,7 @@
     </div>
 </div>
 <div class="modal fade" id="sucursalH" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
-    <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
         <div class="modal-content">
             <div class="modal-header" style="background-color: var(--color-primario);">
                 <h5 class="modal-title fontWhite cursiveFont">Hotel Punto MX - Ubicación de la Sucursal</h5>
